--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -101,6 +101,25 @@ footer {
       margin-left: 15px;
     }
   }
+}
+
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
 
 /* miscellaneous */
 
@@ -109,8 +128,6 @@ footer {
   float: left;
   width: 100%;
   margin-top: 45px;
-}
-
 }
 
 /* sidebar */
@@ -178,3 +195,8 @@ input {
   }
 }
 
+/* Dropdown menu */
+
+.dropdown-menu.active {
+  display: block;
+}
